# inverse-kinematics-2d-manipulator

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: manipulator.h  robot_configuration.h
src/: main.cpp  manipulator.cpp  manipulator.h
test/: tests.cpp
